--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button onclick="cadastrar()">Cadastrar</button>
             </div>
             <div class="div-5">
-                <p class="mudar-fonte">Não consegue acessar?</p>
+                <p class="mudar-fonte">Não consegue acessar?a</p>
                 <p class="mudar-fonte rdc" onclick="redirecionar()">Recuperar senha</p>
             </div>
         </div>
