--- a/index.html
+++ b/index.html
@@ -10,35 +10,32 @@
 </head>
 
 <body>
-    
-    <div class="formulario">
+    <div class="background"></div>
+    <div class="main">
         <h2>Entre agora</h2>
-        <p id="email_errado"></p>
-        <div class="div-3">
-            <div class="div-1">
-                <p id="email_para">Email</p>
-                <input  id="email" type="email" placeholder="E-mail">
-            </div>
-
-            <div class="div-1">
-                <p id="senha">Senha</p>
-                <input type="password" placeholder="Senha">
-            </div>
-            <div class="div-2">
-                <input type="checkbox">
-                <p>Lembrar minhas informações</p>
-            </div>
-            <div class="div-4">
-                <button onclick="login()">Fazer Login</button>
-                <p>ou</p>
-                <button onclick="cadastrar()">Cadastrar</button>
-            </div>
-            <div class="div-5">
-                <p class="mudar-fonte">Não consegue acessar?a</p>
-                <p class="mudar-fonte rdc" onclick="redirecionar()">Recuperar senha</p>
-            </div>
+        <div class="div-1 div-input">
+            <p id="email_para">Email</p>
+            <input id="email" type="email" placeholder="E-mail">
+        </div>
+        <div class="div-1 div-input">
+            <p id="senha">Senha</p>
+            <input type="password" placeholder="Senha">
+        </div>
+        <div class="div-1 div-check">
+            <div class="checkbox"></div>
+            <p>Lembrar minhas informações</p>
+        </div>
+        <div class="div-1 div-button">
+            <button onclick="login()">Fazer Login</button>
+            <p>ou</p>
+            <button onclick="cadastrar()">Cadastrar</button>
+        </div>
+        <div class="div-1 div-rec">
+            <p>Não consegue acessar</p>
+            <p onclick="redirecionar()">? Recuperar senha</p>
         </div>
     </div>
+
     <div class="sqr-out">
         <div class="sqr"></div>
     </div>
